# web-forum

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.profiling  Makefile  PROFILING.md  README.md  check-stack.sh  docker-compose.profiling.yml  docker-compose.yml  profile.sh
api-gateway/: go.mod  go.sum
api-gateway/cmd/: main.go
api-gateway/config/: config.go
api-gateway/internal/app/: app.go
load-test/: Dockerfile  locustfile.py  requirements.txt
media-service/: .env  go.mod  go.sum
media-service/config/: config.go
monitoring/alertmanager/: config.yml
monitoring/loki/: local-config.yaml
monitoring/prometheus/: prometheus.yml  rules.yml
monitoring/promtail/: config.yml
monitoring/telegram-bot/: Dockerfile  bot.py  requirements.txt
post-service/: .env  Makefile  docker-compose.yaml  go.mod  go.sum
post-service/config/: config.go
post-service/deploy/: Dockerfile
post-service/graphql/: schema.graphql
post-service/migrations/: 0001_init.down.sql  0001_init.up.sql  0002_fill.down.sql  0002_fill.up.sql
post-service/requests/: createBoard.json  createComment.json  createPost.json  deleteBoard.json  deleteComment.json  deletePost.json  getBoards.json  getComments.json  getPosts.json  restoreBoard.json  test.json
src/: api_docs.rs  db.rs  main.rs  models.rs  routes.rs  telemetry.rs  trace_context_middleware.rs  tracing_middleware.rs
static/: docs.html
tools/: README.md  bottleneck_detector.py  check_all.py  check_logs.py  check_metrics.py  check_tracing.py  performance_analyzer.py  requirements.txt  simulate_bottleneck.py
(+37 files in other folders)
