[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
scylla = "0.11.1"  # Последняя стабильная версия
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
actix-web = "4.11.0"
anyhow = "1.0.98"
serde = { version = "1.0", features = ["derive"] }
